<resources>
    <string name="app_name">Rentero</string>
    <string name="email">Email</string>
    <string name="lozinka">Lozinka</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="nemate_nalog_registrujte_se">Nemate nalog? Registrujte se.</string>
    <string name="prijava">Prijava</string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="broj_telefona">Broj telefona</string>
    <string name="registracija">Registracija</string>
    <string name="registruj_se">Registruj se</string>
    <string name="ve_imate_nalog_prijavite_se">Već imate nalog? Prijavite se.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bez_depozita">Bez depozita</string>
    <string name="kubikaza">Kubikaza</string>
    <string name="broj_vrata">Broj vrata</string>
    <string name="broj_putnika">Broj putnika</string>
    <string name="brand_model">Brand Model</string>
    <string name="opis">Opis</string>
    <string name="automobil">Automobil</string>
    <string name="cena">Cena</string>
    <string name="karakteristike">KARAKTERISTIKE</string>
    <string name="rezervacija">REZERVACIJA</string>
    <string name="company">Company</string>
    <string name="company_image">Company image</string>
    <string name="unesite_komentar">Unesite komentar</string>
</resources>